2010-11-05 : added realm to gridspec file names
2010-11-05 : reverted ext_cell_measures to cell_measures
2010-10-27 : edited the test for permission on output directory, used to fail if you had group write privileges but that wasnt your main group
2010-10-22 : Tagging 2.4.0
2010-10-22 : updated docs to reflect all these changes
2010-10-22 : exposed cmor_set/get/has_variable in Fortran interface, just like Python works only on "string" variables
2010-10-22 : add optional "parent_experiment_rip" to cmor_dataset (C,Fortran,Python)
2010-10-22 : fixed bug with variables using "grids" and singleton dimensions
2010-10-22 : upgraded to 2.4 in devel branch
2010-10-22 : exposed cmor_set_variable_attribute to users in Python
2010-10-22 : cell_measures var attribute is now called ext_cell_measures
2010-10-06 : tagging 2.3
2010-09-29 : Cleaned up error messages, now tries to output var/axis it was working on as well as table used.
2010-09-29 : When value that exceeds valid_min/max is found, now returns location of extreme point instead of first point encountered, as well as actuall coordinates values (not just indices)
2010-09-22 : Joerg found a bug that was due to checking only the refvar.dimension w/o checking the actual tables as well
2010-09-01 : fixed a bug on mac 32bit when reading in net3 version string
2010-09-01 : some vars with grid and singleton dims were wrongly analyzed by cmor_variable has not being defined with the right number of dimmensions.
2010-09-01 : updated doc. Was saying you can pass "none" for units when it really is: ""
2010-09-01 : updated doc. Was wrongly stating you can pass "none" if no missing_value
2010-08-24 : when writing time only variables, the time_bnds would fail to write if passed at cmor_write time.
2010-08-23 : tagging 2.2
2010-08-23 : DRS was wrongly constructed for table Oclim
2010-08-23 : tagging 2.1
2010-08-23 : create_output_path doesn't need to be called b4 cmor_write any more.