@@ -58,7 +58,7 @@ def main():
     cmor_initialisation()
     values, axes = setup_data()
     cmor_define_and_write(values, axes)
-    cmor.close()
+    print cmor.close(file_name=True)
     
 if __name__ == '__main__':
 
